--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ ktorVersion=2.0.1
 logbackVersion=1.2.3
 
 kotlin.mpp.stability.nowarn=true
-kotlin.js.compiler=ir
+kotlin.js.compiler=legacy
 org.gradle.jvmargs=-Xmx2g
 
 exposed_version=0.38.2
