--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ serializationVersion=1.3.3
 #Dependencies
 systemProp.kvisionVersion=5.10.0
 ktorVersion=2.0.1
+kmongoVersion=4.6.0
 logbackVersion=1.2.3
 
 kotlin.mpp.stability.nowarn=true
