--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ kmongoVersion=4.6.0
 logbackVersion=1.2.3
 
 kotlin.mpp.stability.nowarn=true
-kotlin.js.compiler=legacy
+kotlin.js.compiler=ir
 org.gradle.jvmargs=-Xmx2g
 
 exposed_version=0.38.2
