--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,11 @@
 javaVersion=1.8
 #Plugins
-systemProp.kotlinVersion=1.7.0
+systemProp.kotlinVersion=1.7.10
 serializationVersion=1.3.3
 #Dependencies
-systemProp.kvisionVersion=5.10.1
-ktorVersion=2.0.2
-kmongoVersion=4.6.0
+systemProp.kvisionVersion=5.13.1
 logbackVersion=1.2.3
+fsLibVersion=1.0.7-SNAPSHOT
 
 kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
