--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ javaVersion=1.8
 systemProp.kotlinVersion=1.7.10
 serializationVersion=1.3.3
 #Dependencies
-systemProp.kvisionVersion=5.13.1
+systemProp.kvisionVersion=5.14.0
 logbackVersion=1.2.3
-fsLibVersion=1.1.2-SNAPSHOT
+fsLibVersion=1.1.5
 
 kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
