--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ serializationVersion=1.3.3
 #Dependencies
 systemProp.kvisionVersion=5.14.0
 logbackVersion=1.2.3
-fsLibVersion=1.2.2
+fsLibVersion=1.2.3-SNAPSHOT
 
 kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
