--- a/src/backendMain/resources/application.conf
+++ b/src/backendMain/resources/application.conf
@@ -1,13 +1,26 @@
 ktor {
   development = true
   deployment {
-    port = 8000
+    port = 80
+    port = ${?PORT}
+    sslPort = 443
+    sslPort = ${?SSLPORT}
     watch = [build/classes/kotlin/backend/main]
   }
 
   application {
     modules = [com.fonrouge.remoteScreen.MainKt.main]
   }
+
+  security {
+      ssl {
+      keyStore = keystore.p12
+            keyStore = ${?KEYSTORE}
+            keyAlias = fsCasaDulce
+            keyStorePassword = fb513d2033
+            privateKeyPassword = fb513d2033
+        }
+    }
 }
 
 db {
