--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ javaVersion=1.8
 systemProp.kotlinVersion=1.7.10
 #Dependencies
 systemProp.kvisionVersion=5.15.3
-logbackVersion=1.4.0
+#logbackVersion=1.4.0
 fsLibVersion=1.2.6
 
 kotlin.mpp.stability.nowarn=true
