--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 javaVersion=1.8
 #Plugins
-systemProp.kotlinVersion=1.7.10
+systemProp.kotlinVersion=1.7.20
 #Dependencies
-systemProp.kvisionVersion=5.15.3
-#logbackVersion=1.4.0
+systemProp.kvisionVersion=5.16.0
+logbackVersion=1.4.0
 fsLibVersion=1.2.8
 
 kotlin.mpp.stability.nowarn=true
