* integrando funcionalidad para Shopify

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,10 @@ javaVersion=1.8
 #Plugins
 systemProp.kotlinVersion=1.7.20
 #Dependencies
-systemProp.kvisionVersion=5.16.1
+systemProp.kvisionVersion=5.16.1-SNAPSHOT
 logbackVersion=1.4.0
-fsLibVersion=1.2.12
+ktor_version=2.1.2
+fsLibVersion=1.2.14
 
 kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
