--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@ javaVersion=1.8
 #Plugins
 systemProp.kotlinVersion=1.7.20
 #Dependencies
-systemProp.kvisionVersion=5.16.1-SNAPSHOT
+systemProp.kvisionVersion=5.16.2
 logbackVersion=1.4.0
 ktor_version=2.1.2
-fsLibVersion=1.2.14
+fsLibVersion=1.2.15
 
 kotlin.mpp.stability.nowarn=true
 kotlin.js.compiler=ir
